ArrayList改为LinkedList